# CialloClaw

./: .gitignore  AGENTS.md  CialloClaw_架构设计文档_修订版_v4.md  README.md  go.mod  go.sum  index.html  package-lock.json  package.json  pnpm-lock.yaml  product document.md  product_document.md
.github/workflows/: check.yml  desktop-test.yml
apps/desktop/: AGENTS.md  mirror.html  package.json  postcss.config.cjs  security.html  shell-ball-bubble-pinned.html  shell-ball-bubble.html  shell-ball-input.html  shell-ball-voice.html  tailwind.config.ts  tsconfig.dashboard-test.json  tsconfig.memory-test.json  tsconfig.shell-ball-test.json  vite.config.ts
apps/desktop/docs/: 2026-04-09-shell-ball-fat-chick-design.md  2026-04-11-desktop-shell-ball-three-window-implementation-plan.md  2026-04-11-shell-ball-bubble-pinned-window-implementation-plan.md  2026-04-11-shell-ball-bubble-window-implementation-plan.md  2026-04-11-shell-ball-dashboard-open-implementation-plan.md  2026-04-13-dashboard-task-detail-safety-integration-design.md  2026-04-13-dashboard-task-detail-safety-integration-implementation-plan.md  2026-04-15-dashboard-task-frontend-rpc-integration-plan.md  shell-ball-development-guidelines.md
apps/desktop/scripts/: registerShellBallTestAliases.cjs
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/activity/: mod.rs  stub.rs  types.rs  windows.rs
apps/desktop/src-tauri/src/screen_capture/: mod.rs  stub.rs  types.rs  windows.rs
apps/desktop/src-tauri/src/window_context/: mod.rs  stub.rs  types.rs  windows.rs
docs/: CialloClaw_协议设计文档_v4.md  architecture-overview.md  atomic-features.md  control-panel-settings.md  dashboard-design.md  data-design.md  development-guidelines.md  module-design.md  product-interaction-design.md  protocol-design.md  work-priority-plan.md
services/local-service/: AGENTS.md
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
workers/media-worker/: package.json
workers/media-worker/src/: index.js  index.ts
workers/ocr-worker/: package.json
workers/ocr-worker/src/: index.js  index.test.js  index.ts
workers/playwright-worker/: package.json
(+303 files in other folders)
