[package]
name = "orb_weave"
version = "0.1.0"
description = "Gesture-first floating orb built with Tauri"
authors = ["OpenCode"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-positioner = "2.0"
window-vibrancy = "0.5"
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
